syntax = "proto3";

package bytebase.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/bytebase/bytebase/backend/generated-go/v1";

// Extends MethodOptions to add Bytebase-specific RPC method annotations.
extend google.protobuf.MethodOptions {
  // Whether the method allows access without authentication credentials.
  bool allow_without_credential = 100000;
  // The permission required to call this method.
  string permission = 100001;
  // The authorization method to use for this RPC.
  AuthMethod auth_method = 100002;
  // Whether to audit calls to this method.
  bool audit = 100003;
  // When a method supports allow_missing and may create resources,
  // this specifies the additional permission required when allow_missing=true.
  // Example: UpdateRole with allow_missing requires both bb.roles.update
  // (from permission) and bb.roles.create (from allow_missing_requires).
  string allow_missing_requires = 100004;
}

// Authorization method for RPC calls.
enum AuthMethod {
  // Unspecified authorization method.
  AUTH_METHOD_UNSPECIFIED = 0;
  // Standard IAM authorization check on organizational resources.
  IAM = 1;
  // Custom authorization logic.
  CUSTOM = 2;
}
